<resources>
    <string name="app_name">Minecraft Server Status</string>
    <string name="list_offline">Offline</string>
    <string name="list_players">%d/%d</string>
    <string name="list_empty_title">Oops!</string>
    <string name="list_empty_text">Your list is empty.\nAdd a server with the button below.</string>
    <string name="add_ip">IP/Hostname</string>
    <string name="add_cannot_offline">You cannot add an offline server.</string>
    <string name="detail_motd">MOTD</string>
    <string name="detail_version">Version</string>
    <string name="detail_version_data">%s (%s)</string>
    <string name="detail_players">Players</string>
    <string name="detail_menu_delete">Delete</string>
    <string name="detail_alert_really">Are you sure to delete %s?</string>
    <string name="detail_empty_view">Nobody online or hidden player list.</string>
    <string name="provider_request_fail">Server request failed! Are you connected to the Internet?</string>
    <string name="provider_icon_desc">Icon</string>
    <string name="about_title">About</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_text">Server ping data is provided by \"Minecraft Server Status - JSON API\" from https://api.mcsrvstat.us/.\n\nPlayer head image is provided by \"Minotar - An insanely fast and simple Minecraft avatar API\" from https://minotar.net/</string>
    <string name="about_info_title">Info</string>
    <string name="about_info_text">The app source code is publicly available at\nhttps://github.com/Zero3141/MinecraftServerStatus</string>
    <string name="about_author">Made with ♥ in Frankfurt, Germany\nCopyright © 2020 Heiko\nwww.heiko.host</string>
    <string name="data_db_name">database</string>
    <string name="data_url_query">https://api.mcsrvstat.us/2/%s</string>
    <string name="data_url_player">https://minotar.net/helm/%s/32.png</string>
</resources>