<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp">


                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="match_parent"
                    android:layout_height="128dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/provider_icon_desc"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:text="@string/detail_motd"
                    android:textColor="@color/colorOnPrimaryTitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/motd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:minLines="1"
                    android:textColor="@color/colorOnPrimaryText"
                    android:textSize="18sp"
                    tools:text="A Minecraft Server " />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/detail_version"
                    android:textColor="@color/colorOnPrimaryTitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnPrimaryText"
                    android:textSize="18sp"
                    tools:text="1.14.4 (Paper) " />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/detail_players"
                    android:textColor="@color/colorOnPrimaryTitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/emptyView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_empty_view"
                    android:textColor="@color/colorOnPrimaryText"
                    android:textSize="18sp"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/playersList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</FrameLayout>